# autopledge-insert

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd-annotate/: CMakeLists.txt
src/cmd-annotate/src/: app.cpp
src/cmd-annotate/test/: loop.c  stubbed1.c  stubbed1.ll
src/cmd-c/: CMakeLists.txt
src/cmd-c/src/: app.cpp
src/cmd-insert/: CMakeLists.txt
src/cmd-insert/src/: actions.cpp  app.cpp
src/cmd-ld/: CMakeLists.txt
src/cmd/src/: app.cpp
src/libannotatesyscalls/: CMakeLists.txt
src/libannotatesyscalls/include/: pass.hpp  syscall.hpp
src/libannotatesyscalls/src/: pass.cpp  syscall.cpp
src/libmodifysource/: CMakeLists.txt
src/libmodifysource/include/: actions.hpp  pass.hpp  syscall.hpp
src/libmodifysource/src/: actions.cpp  syscall.cpp
src/libs/json/: CMakeLists.txt
